--- a/index.html
+++ b/index.html
@@ -1,3 +1,86 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lottie Scroll Animation</title>
+    <style>
+        body {
+            margin: 0;
+            overflow-x: hidden; /* Ensure only vertical scroll is considered */
+            background-color: black; /* Set background color to black */
+        }
+        #container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            overflow: hidden;
+        }
+        #lottie-container {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100vh;
+            pointer-events: none;
+        }
+        #menu-bar {
+            position: absolute;
+            top: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            height: 7vh; /* Fixed height for the menu bar */
+            background-color: black; /* Black menu bar */
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 20px;
+            z-index: 10;
+            transition: width 0.1s ease; /* Smooth adjustment */
+        }
+        #menu-left {
+            display: flex;
+            align-items: center;
+        }
+        #menu-right {
+            display: flex;
+            align-items: center;
+        }
+        .menu-button {
+            height: 5vh; /* Adjust button height as needed */
+            margin-left: 10px; /* Space between right buttons */
+        }
+        .scroll-space {
+            height: 300vh; /* Creates enough space for scrolling */
+        }
+    </style>
+</head>
+<body>
+
+<div id="container">
+    <div id="lottie-container"></div>
+    <div id="menu-bar">
+        <div id="menu-left">
+            <img src="1Butt.png" alt="Left Button" class="menu-button">
+        </div>
+        <div id="menu-right">
+            <img src="2Butt.png" alt="Right Button 1" class="menu-button">
+            <img src="3Butt.png" alt="Right Button 2" class="menu-button">
+        </div>
+    </div>
+</div>
+
+<div class="scroll-space"></div>
+
+<!-- Load the Lottie script first -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.0/lottie.min.js"></script>
+
+<!-- Your custom script should come after the Lottie script -->
 <script>
     console.log('Script loaded. Initializing Lottie animation.');
 
@@ -86,3 +169,6 @@
         }
     });
 </script>
+
+</body>
+</html>
