--- a/index.html
+++ b/index.html
@@ -35,21 +35,13 @@
             left: 50%;
             transform: translateX(-50%);
             height: 7vh; /* Fixed height for the menu bar */
-            background-color: black; /* Black menu bar */
             display: flex;
-            justify-content: space-between;
+            justify-content: flex-end; /* Align buttons to the right */
             align-items: center;
             padding: 0 20px;
             z-index: 10;
-            transition: width 0.1s ease; /* Smooth adjustment */
-        }
-        #menu-left {
-            display: flex;
-            align-items: center;
-        }
-        #menu-right {
-            display: flex;
-            align-items: center;
+            background-color: transparent; /* Make the menu bar transparent */
+            width: auto; /* Adjust width dynamically */
         }
         .menu-button {
             height: 5vh; /* Adjust button height as needed */
@@ -65,22 +57,16 @@
 <div id="container">
     <div id="lottie-container"></div>
     <div id="menu-bar">
-        <div id="menu-left">
-            <img src="1Butt.png" alt="Left Button" class="menu-button">
-        </div>
-        <div id="menu-right">
-            <img src="2Butt.png" alt="Right Button 1" class="menu-button">
-            <img src="3Butt.png" alt="Right Button 2" class="menu-button">
-        </div>
+        <!-- Only two buttons centered to the right -->
+        <img src="2Butt.png" alt="Right Button 1" class="menu-button">
+        <img src="3Butt.png" alt="Right Button 2" class="menu-button">
     </div>
 </div>
 
 <div class="scroll-space"></div>
 
-<!-- Load the Lottie script first with the defer attribute -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.0/lottie.min.js" defer></script>
 
-<!-- Your custom script should also use defer to ensure Lottie is loaded first -->
 <script defer>
     document.addEventListener('DOMContentLoaded', function () {
         console.log('Script loaded. Initializing Lottie animation.');
@@ -95,26 +81,23 @@
         });
 
         // Function to adjust the width of the menu bar to match the Lottie animation
-       function adjustMenuBarWidth() {
-    const lottieElement = document.querySelector('#lottie-container svg');
-    const menuBar = document.getElementById('menu-bar');
+        function adjustMenuBarWidth() {
+            const lottieElement = document.querySelector('#lottie-container svg');
+            const menuBar = document.getElementById('menu-bar');
 
-    if (lottieElement) {
-        // Get the precise width of the Lottie animation, adjusting for potential fractional pixels
-        const lottieWidth = Math.ceil(lottieElement.getBoundingClientRect().width) + 2; // Add 2px to cover gaps
-        console.log(`Lottie Element Width: ${lottieWidth}`);
+            if (lottieElement) {
+                // Get the precise width of the Lottie animation, adjusting for potential fractional pixels
+                const lottieWidth = Math.ceil(lottieElement.getBoundingClientRect().width) + 2; // Add 2px to cover gaps
+                console.log(`Lottie Element Width: ${lottieWidth}`);
 
-        // Apply adjusted width to the menu bar
-        menuBar.style.width = `${lottieWidth}px`;
+                // Optional: Adjust positioning to ensure centering remains correct
+                menuBar.style.left = `calc(50% - ${lottieWidth / 2}px)`;
 
-        // Optional: Adjust positioning to ensure centering remains correct
-        menuBar.style.left = `calc(50% - ${lottieWidth / 2}px)`;
-
-        console.log(`Adjusted Menu Bar Width to: ${lottieWidth}`);
-    } else {
-        console.error('Lottie SVG element not found. Retrying...');
-    }
-}
+                console.log(`Adjusted Menu Bar Width to: ${lottieWidth}`);
+            } else {
+                console.error('Lottie SVG element not found. Retrying...');
+            }
+        }
 
         // Use ResizeObserver to monitor changes in the Lottie element's size
         const resizeObserver = new ResizeObserver(entries => {
