--- a/index.html
+++ b/index.html
@@ -32,16 +32,14 @@
         #menu-bar {
             position: absolute;
             top: 0;
-            left: 50%;
-            transform: translateX(-50%);
             height: 7vh; /* Fixed height for the menu bar */
             display: flex;
             justify-content: flex-end; /* Align buttons to the right */
             align-items: center;
-            padding: 0 20px;
+            padding-right: 20px; /* Adjust padding to keep buttons aligned */
             z-index: 10;
             background-color: transparent; /* Make the menu bar transparent */
-            width: auto; /* Adjust width dynamically */
+            pointer-events: none; /* Prevent interaction with the bar itself */
         }
         .menu-button {
             height: 5vh; /* Adjust button height as needed */
@@ -57,7 +55,6 @@
 <div id="container">
     <div id="lottie-container"></div>
     <div id="menu-bar">
-        <!-- Only two buttons centered to the right -->
         <img src="2Butt.png" alt="Right Button 1" class="menu-button">
         <img src="3Butt.png" alt="Right Button 2" class="menu-button">
     </div>
@@ -80,18 +77,19 @@
             path: 'data.json' // Path to your Lottie JSON file
         });
 
-        // Function to adjust the width of the menu bar to match the Lottie animation
+        // Function to adjust the width and positioning of the menu bar
         function adjustMenuBarWidth() {
             const lottieElement = document.querySelector('#lottie-container svg');
             const menuBar = document.getElementById('menu-bar');
 
             if (lottieElement) {
-                // Get the precise width of the Lottie animation, adjusting for potential fractional pixels
-                const lottieWidth = Math.ceil(lottieElement.getBoundingClientRect().width) + 2; // Add 2px to cover gaps
+                // Get the precise width of the Lottie animation
+                const lottieWidth = lottieElement.getBoundingClientRect().width;
                 console.log(`Lottie Element Width: ${lottieWidth}`);
 
-                // Optional: Adjust positioning to ensure centering remains correct
-                menuBar.style.left = `calc(50% - ${lottieWidth / 2}px)`;
+                // Apply adjusted width and align it with the Lottie animation
+                menuBar.style.width = `${lottieWidth}px`;
+                menuBar.style.left = `${lottieElement.getBoundingClientRect().left}px`; // Aligns with the Lottie
 
                 console.log(`Adjusted Menu Bar Width to: ${lottieWidth}`);
             } else {
@@ -115,7 +113,6 @@
             const lottieElement = document.querySelector('#lottie-container svg');
 
             if (lottieElement) {
-                console.log('Starting observation of Lottie element.');
                 resizeObserver.observe(lottieElement); // Start observing the Lottie element
                 adjustMenuBarWidth(); // Initial adjustment
             } else {
@@ -123,19 +120,7 @@
             }
         });
 
-        // Continuous monitoring to ensure that the menu bar stays synchronized
-        function monitorAnimation() {
-            adjustMenuBarWidth();
-            requestAnimationFrame(monitorAnimation); // Continuously monitor the Lottie element width
-        }
-
-        // Start the monitoring process when the Lottie animation is loaded
-        lottieAnimation.addEventListener('DOMLoaded', () => {
-            console.log('Starting continuous monitoring of animation.');
-            monitorAnimation();
-        });
-
-        // Bind the animation playback to the scroll event
+        // Monitor scroll to update Lottie playback
         window.addEventListener('scroll', () => {
             console.log('Scroll event detected.');
             if (lottieAnimation.totalFrames > 0) {
