--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             adjustMenuBarWidth();
         });
 
-        // Adjust the width of the menu bar to match the Lottie animation
+        // Adjust the width and left position of the menu bar to match the Lottie animation
         function adjustMenuBarWidth() {
             const lottieElement = document.querySelector('#lottie-container svg');
             const menuBar = document.getElementById('menu-bar');
