--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <svg id="lottie-element"></svg> <!-- Replace with actual Lottie SVG or animation -->
     <div id="menu-bar">
         <img src="3Butt.png" alt="Button 1">
-        <img src="4Butt.png" alt="Button 2">
+        <img src="4Butt.png" alt="Button 2"> <!-- Make sure the path is correct -->
     </div>
 </div>
 
