--- a/index.html
+++ b/index.html
@@ -2,98 +2,174 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lottie Animation with Menu Bar</title>
+    <title>Lottie Scroll Animation</title>
     <style>
-        #lottie-container {
+        body {
+            margin: 0;
+            overflow-x: hidden; /* Ensure only vertical scroll is considered */
+            background-color: black; /* Set background color to black */
+        }
+        #container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100vh;
             display: flex;
             justify-content: center;
             align-items: center;
+            overflow: hidden;
+        }
+        #lottie-container {
+            position: absolute;
+            top: 0;
+            left: 0;
             width: 100%;
             height: 100vh;
-            overflow: hidden;
-            position: relative;
+            pointer-events: none;
         }
-
         #menu-bar {
             position: absolute;
             top: 0;
-            height: 7vh; 
+            left: 50%;
+            transform: translateX(-50%);
+            height: 7vh; /* Fixed height for the menu bar */
+            background-color: black; /* Black menu bar */
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 20px;
+            z-index: 10;
+            transition: width 0.1s ease; /* Smooth adjustment */
+        }
+        #menu-left {
             display: flex;
             align-items: center;
-            justify-content: flex-end; 
-            background: transparent; 
-            z-index: 10;
         }
-
-        #menu-bar img {
-            margin-right: 10px;
+        #menu-right {
+            display: flex;
+            align-items: center;
+        }
+        .menu-button {
+            height: 5vh; /* Adjust button height as needed */
+            margin-left: 10px; /* Space between right buttons */
+        }
+        .scroll-space {
+            height: 300vh; /* Creates enough space for scrolling */
         }
     </style>
 </head>
 <body>
 
-<div id="lottie-container">
-    <!-- Lottie animation will be injected here -->
+<div id="container">
+    <div id="lottie-container"></div>
     <div id="menu-bar">
-        <img src="3Butt.png" alt="Button 1">
-        <img src="4Butt.png" alt="Button 2">
+        <div id="menu-left">
+            <img src="1Butt.png" alt="Left Button" class="menu-button">
+        </div>
+        <div id="menu-right">
+            <img src="2Butt.png" alt="Right Button 1" class="menu-button">
+            <img src="3Butt.png" alt="Right Button 2" class="menu-button">
+        </div>
     </div>
 </div>
 
-<!-- Include the Lottie library -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bodymovin/5.7.5/lottie.min.js"></script>
+<div class="scroll-space"></div>
 
-<script>
-    // Initialize the Lottie animation
-    document.addEventListener('DOMContentLoaded', () => {
-        const lottieContainer = document.querySelector('#lottie-container');
-        lottie.loadAnimation({
-            container: lottieContainer, 
+<!-- Load the Lottie script first with the defer attribute -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.12.0/lottie.min.js" defer></script>
+
+<!-- Your custom script should also use defer to ensure Lottie is loaded first -->
+<script defer>
+    document.addEventListener('DOMContentLoaded', function () {
+        console.log('Script loaded. Initializing Lottie animation.');
+
+        // Load the Lottie animation JSON file
+        const lottieAnimation = lottie.loadAnimation({
+            container: document.getElementById('lottie-container'),
             renderer: 'svg',
-            loop: true,
-            autoplay: true,
-            path: 'path/to/your/lottie/file.json' // Update this path to your Lottie file
+            loop: false,
+            autoplay: false,
+            path: 'data.json' // Path to your Lottie JSON file
         });
 
-        adjustMenuBarWidth(); // Ensure the menu bar is adjusted when Lottie loads
-    });
+        // Function to adjust the width of the menu bar to match the Lottie animation
+        function adjustMenuBarWidth() {
+            const lottieElement = document.querySelector('#lottie-container svg');
+            const menuBar = document.getElementById('menu-bar');
 
-    function adjustMenuBarWidth() {
-        const lottieElement = document.querySelector('#lottie-container svg');
-        const menuBar = document.getElementById('menu-bar');
+            if (lottieElement) {
+                const lottieWidth = lottieElement.getBoundingClientRect().width;
+                console.log(`Lottie Element Width: ${lottieWidth}`);
 
-        if (lottieElement) {
-            const lottieRect = lottieElement.getBoundingClientRect();
-            const containerRect = lottieElement.parentElement.getBoundingClientRect(); 
-            const lottieWidth = lottieRect.width;
-            const lottieLeft = lottieRect.left - containerRect.left;
+                // Adjust menu bar width and force redraw
+                menuBar.style.width = `${lottieWidth}px`;
+                menuBar.style.transform = 'scale(1.01)'; // Apply temporary transform
+                requestAnimationFrame(() => {
+                    menuBar.style.transform = ''; // Reset transform
+                });
 
-            console.log(`Lottie Element Width: ${lottieWidth}, Left: ${lottieLeft}`);
-
-            menuBar.style.width = `${lottieWidth}px`;
-            menuBar.style.left = `${lottieLeft}px`;
-
-            console.log(`Adjusted Menu Bar Width to: ${lottieWidth} and Left to: ${lottieLeft}`);
-        } else {
-            console.error('Lottie SVG element not found.');
+                console.log(`Adjusted Menu Bar Width to: ${lottieWidth}`);
+            } else {
+                console.error('Lottie SVG element not found. Retrying...');
+            }
         }
-    }
 
-    const resizeObserver = new ResizeObserver(() => {
-        adjustMenuBarWidth();
+        // Use ResizeObserver to monitor changes in the Lottie element's size
+        const resizeObserver = new ResizeObserver(entries => {
+            for (let entry of entries) {
+                if (entry.target.matches('#lottie-container svg')) {
+                    console.log('ResizeObserver triggered for Lottie element.');
+                    adjustMenuBarWidth(); // Adjust when the Lottie element resizes
+                }
+            }
+        });
+
+        // Wait for the Lottie animation to load and then start observing
+        lottieAnimation.addEventListener('DOMLoaded', () => {
+            console.log('Lottie animation DOM loaded.');
+            const lottieElement = document.querySelector('#lottie-container svg');
+
+            if (lottieElement) {
+                console.log('Starting observation of Lottie element.');
+                resizeObserver.observe(lottieElement); // Start observing the Lottie element
+                adjustMenuBarWidth(); // Initial adjustment
+            } else {
+                console.error('Lottie SVG element not found after DOMLoaded.');
+            }
+        });
+
+        // Continuous monitoring to ensure that the menu bar stays synchronized
+        function monitorAnimation() {
+            adjustMenuBarWidth();
+            requestAnimationFrame(monitorAnimation); // Continuously monitor the Lottie element width
+        }
+
+        // Start the monitoring process when the Lottie animation is loaded
+        lottieAnimation.addEventListener('DOMLoaded', () => {
+            console.log('Starting continuous monitoring of animation.');
+            monitorAnimation();
+        });
+
+        // Bind the animation playback to the scroll event
+        window.addEventListener('scroll', () => {
+            console.log('Scroll event detected.');
+            if (lottieAnimation.totalFrames > 0) {
+                const scrollTop = window.scrollY || window.pageYOffset;
+                const maxScrollTop = document.documentElement.scrollHeight - window.innerHeight;
+                const scrollFraction = scrollTop / maxScrollTop;
+                const frame = Math.min(
+                    lottieAnimation.totalFrames * scrollFraction,
+                    lottieAnimation.totalFrames - 1
+                );
+                console.log(`Scroll position: ${scrollTop}, Frame: ${frame}`);
+                lottieAnimation.goToAndStop(frame, true);
+            } else {
+                console.error('Animation frames are not available yet or set to zero.');
+            }
+        });
     });
-
-    const lottieContainer = document.querySelector('#lottie-container');
-    if (lottieContainer) {
-        resizeObserver.observe(lottieContainer);
-    } else {
-        console.error('Lottie container not found.');
-    }
-
-    window.addEventListener('load', adjustMenuBarWidth);
-    window.addEventListener('resize', adjustMenuBarWidth);
 </script>
 
 </body>
