--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
         body {
             margin: 0;
             overflow-x: hidden; /* Ensure only vertical scroll is considered */
+            display: flex;
+            justify-content: center;
         }
         #animation-container {
-            width: 1920px;
-            height: 2050px;
-            margin: 0 auto;
+            width: 100vw; /* Make it responsive with the viewport width */
+            max-width: 1920px; /* Constrain to max size */
+            height: auto;
             position: relative;
         }
         #button-container {
@@ -20,16 +22,13 @@
             top: 20px;
             left: 50%;
             transform: translateX(-50%);
-            z-index: 10;
             display: flex;
             gap: 10px;
+            z-index: 10;
         }
         #lottie-container {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100vh;
+            width: 100%; /* Make the Lottie fill the container */
+            height: calc(100vh); /* Adjust to fit the viewport height */
             pointer-events: none;
         }
         .scroll-space {
