--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         }
         #button-container {
             position: absolute;
-            top: 20px;
+            top: 2vh; /* Position relative to viewport height */
             left: 50%;
             transform: translateX(-50%);
             display: flex;
-            gap: 10px;
+            gap: 1vw; /* Gap between buttons scales with viewport width */
             z-index: 10;
         }
         #lottie-container {
@@ -35,13 +35,13 @@
             height: 300vh; /* Creates enough space for scrolling */
         }
         .button {
-            padding: 10px 20px;
+            padding: 1vh 2vw; /* Padding scales with viewport size */
             border: none;
-            border-radius: 5px;
+            border-radius: 0.5vh; /* Scales with viewport height */
             background-color: #007BFF;
             color: white;
             cursor: pointer;
-            font-size: 16px;
+            font-size: 1.5vh; /* Font size scales with viewport height */
         }
         .button:hover {
             background-color: #0056b3;
