--- a/index.html
+++ b/index.html
@@ -35,16 +35,9 @@
             height: 300vh; /* Creates enough space for scrolling */
         }
         .button {
-            padding: 1vh 2vw; /* Padding scales with viewport size */
-            border: none;
-            border-radius: 0.5vh; /* Scales with viewport height */
-            background-color: #007BFF;
-            color: white;
+            width: 8vw; /* Scale with viewport width */
+            height: auto;
             cursor: pointer;
-            font-size: 1.5vh; /* Font size scales with viewport height */
-        }
-        .button:hover {
-            background-color: #0056b3;
         }
     </style>
 </head>
@@ -52,8 +45,12 @@
 
 <div id="animation-container">
     <div id="button-container">
-        <button class="button">Button 1</button>
-        <button class="button">Button 2</button>
+        <a href="https://x.com/slickricksolana" target="_blank">
+            <img src="1Butt.png" alt="Button 1" class="button">
+        </a>
+        <a href="https://t.me/SlickRickPortal" target="_blank">
+            <img src="2Butt.png" alt="Button 2" class="button">
+        </a>
     </div>
     <div id="lottie-container"></div>
 </div>
