--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <a href="https://x.com/slickricksolana" target="_blank">
             <img src="1Butt.png" alt="Button 1" class="button">
         </a>
-        <img src="slickRick.png" alt="Slick Rick Logo" class="logo">
+        <img src="slickRick'.png" alt="Slick Rick Logo" class="logo">
         <a href="https://t.me/SlickRickPortal" target="_blank">
             <img src="2Butt.png" alt="Button 2" class="button">
         </a>
