--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     });
 
     // Set the playback speed to half of the normal speed
-    lottieAnimation.setSpeed(0.2);
+    lottieAnimation.setSpeed(0.5);
 
     // Listener for when the Lottie animation DOM is loaded
     lottieAnimation.addEventListener('DOMLoaded', () => {
@@ -124,8 +124,9 @@
                 console.warn('Max scrollable height is zero or negative. Check scroll-space height or body height setting.');
             }
 
-            const scrollFraction = scrollTop / maxScrollTop;
-            console.log(`Scroll fraction (scrollTop / maxScrollTop): ${scrollFraction}`);
+            // Adjust the scroll fraction to be 1/3 of its calculated value
+            const scrollFraction = (scrollTop / maxScrollTop) / 3;
+            console.log(`Scroll fraction (scrollTop / maxScrollTop / 3): ${scrollFraction}`);
 
             if (isNaN(scrollFraction) || !isFinite(scrollFraction)) {
                 console.error('Scroll fraction calculation failed, check scrollTop and maxScrollTop values.');
