--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             pointer-events: none;
         }
         .scroll-space {
-            height: 300vh; /* Creates enough space for scrolling */
+            height: 3000px; /* Creates enough space for scrolling */
         }
         .button, .logo {
             height: auto;
