--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             }
 
             // Adjust the scroll fraction to be 1/3 of its calculated value
-            const scrollFraction = (scrollTop / maxScrollTop) * 3;
+            const scrollFraction = (scrollTop / maxScrollTop) / 10;
             console.log(`Scroll fraction (scrollTop / maxScrollTop / 3): ${scrollFraction}`);
 
             if (isNaN(scrollFraction) || !isFinite(scrollFraction)) {
